--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@
   * body .container #about_section_id .about_section_class {
     display: flex;
     flex-direction: column;
-    height: 170vh;
+    height: 100vh;
     background-color: #00313E;
   }
   * body .container #about_section_id .about_section_class .section_title {
@@ -201,25 +201,9 @@
     margin: 5vh 0 0 10vw;
   }
   * body .container #about_section_id .about_section_class .about_section_content #about_page_logo {
-    width: 30vw;
-    height: 30vw;
-  }
-  * body .container #about_section_id .about_section_class .about_section_content .brand_name_about {
-    width: 100%;
-  }
-  * body .container #about_section_id .about_section_class .about_section_content .passion_block {
-    text-align: center;
-    width: 90%;
-    border: 3px solid #146166;
-    border-radius: 5px;
-    padding: 1vh 3vw;
-    font-weight: bold;
-  }
-  * body .container #about_section_id .about_section_class .about_section_content .passion_things {
-    display: flex;
-    flex-direction: column;
-    gap: 2vh;
-    margin: 2vh 0 0 0;
+    width: 22vw;
+    height: 22vw;
+    margin: 0 0 -3vh 0;
   }
   * body .container #about_section_id .about_section_class .about_section_content .resume_button_div {
     display: flex;
@@ -229,7 +213,7 @@
     width: 63vw;
     height: 2vw;
     padding: 4vw 4vh;
-    margin: 5vh 0 0 0;
+    margin: 0vh 0 0 0;
     border-radius: 5px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.521);
   }
@@ -867,7 +851,7 @@
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .input_div textarea {
     background-color: #36395D;
-    height: 30vh;
+    height: 20vh;
     width: 78vw;
     border: none;
     border-radius: 5px;
@@ -1268,7 +1252,7 @@
     justify-content: center;
     align-items: center;
     margin: 2vh 0 0 5vh;
-    gap: 2vw;
+    gap: 1vw;
   }
   * body .container #skills_section_id .skills_section_class .skills_section_content .skills_circles_section .skills_circles_one .skill_circle {
     display: flex;
@@ -1278,8 +1262,8 @@
     margin: 2vh 0 1vh 0;
   }
   * body .container #skills_section_id .skills_section_class .skills_section_content .skills_circles_section .skills_circles_one .skill_circle .skill_back {
-    width: 11vw;
-    height: 11vw;
+    width: 12vw;
+    height: 12vw;
     border: 3px solid #080E2F;
     background-color: #00313E;
     background-color: #146166;
@@ -1290,8 +1274,8 @@
     align-items: center;
   }
   * body .container #skills_section_id .skills_section_class .skills_section_content .skills_circles_section .skills_circles_one .skill_circle .skill_back .skill_front {
-    width: 10vw;
-    height: 10vw;
+    width: 11vw;
+    height: 11vw;
     border: none;
     background-color: #080E2F;
     border-radius: 50%;
@@ -1837,36 +1821,36 @@
     gap: 18vw;
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #github {
-    width: 7vw;
-    height: 7vw;
-  }
-  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #linkedin {
-    width: 7vw;
-    height: 8vw;
-  }
-  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #twitter {
     width: 5vw;
     height: 5vw;
   }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #linkedin {
+    width: 5vw;
+    height: 6vw;
+  }
+  * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #twitter {
+    width: 3.5vw;
+    height: 3.5vw;
+  }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby small .tabletsocials #instagram {
-    width: 6vw;
-    height: 6.5vw;
+    width: 4vw;
+    height: 4.5vw;
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights {
     display: flex;
     justify-content: center;
     gap: 3vw;
-    margin: 15vh 0 0 0;
+    margin: 30vh 0 0 0;
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights #copyright_courdevs {
-    margin: -5.5vh 0 0 0;
-    width: 8vw;
-    height: 8vw;
+    margin: -4vh 0 0 0;
+    width: 6vw;
+    height: 6vw;
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights p {
     color: #36395D;
     font-size: 1.2em;
-    font-size: 3vw;
+    font-size: 2, 5vw;
     font-family: "Inter", sans-serif;
   }
   * body .container #contact_section_id .contact_section_class .contact_section_form form .poweredby .copyrights .courdev {
