--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,7 @@ $firstblue: #58a6ff;
                     .about_section_class {
                         display: flex;
                         flex-direction: column;
-                        height: 170vh;
+                        height: 100vh;
                         background-color: $nextgreen;
                         .section_title {
                             margin: 5vh 0 0 10vw;
@@ -250,29 +250,42 @@ $firstblue: #58a6ff;
                             width: 80%;
                             margin: 5vh 0 0 10vw;
                             // text-align: center;
+                            // .first_para_about {
+                            //     // .brand_name {
+                            //     //     display: flex;
+                            //     //     width: 100%;
+                            //     //     text-align: left;
+                            //     //     // margin: 0 0 0 -15vw;
+                            //     //     #about_page_logo {
+                            //     //         width: 25vw;
+                            //     //         height: 25vw;
+                            //     //     }
+                            //     // }
+                            // }
                             #about_page_logo {
-                                width: 30vw;
-                                height: 30vw;
+                                width: 22vw;
+                                height: 22vw;
+                                margin: 0 0 -3vh 0;
                             }
-                            .brand_name_about {
-                                width: 100%;
-                            }
-                            .passion_block {
-                                text-align: center;
-                                width: 90%;
-                                border: 3px solid $skillsteal;
-                                border-radius: 5px;
-                                // background-color: $skillsteal;
-                                // background-color: $darkblue;
-                                padding: 1vh 3vw;
-                                font-weight: bold;
-                            }
-                            .passion_things {
-                                display: flex;
-                                flex-direction: column;
-                                gap: 2vh;
-                                margin: 2vh 0 0 0;
-                            }
+                            // .brand_name_about {
+                            //     width: 100%;
+                            // }
+                            // .passion_block {
+                            //     text-align: center;
+                            //     width: 90%;
+                            //     border: 3px solid $skillsteal;
+                            //     border-radius: 5px;
+                            //     // background-color: $skillsteal;
+                            //     // background-color: $darkblue;
+                            //     padding: 1vh 3vw;
+                            //     font-weight: bold;
+                            // }
+                            // .passion_things {
+                            //     display: flex;
+                            //     flex-direction: column;
+                            //     gap: 2vh;
+                            //     margin: 2vh 0 0 0;
+                            // }
                             .resume_button_div {
                                 display: flex;
                                 justify-content: center;
@@ -281,7 +294,7 @@ $firstblue: #58a6ff;
                                 width: 63vw;
                                 height: 2vw;
                                 padding: 4vw 4vh;
-                                margin: 5vh 0 0 0;
+                                margin: 0vh 0 0 0;
                                 border-radius: 5px;
                                 box-shadow: 2px 2px 2px 2px $boxshadowcircles;
                                 a {
@@ -966,7 +979,7 @@ $firstblue: #58a6ff;
                                     }
                                     textarea {
                                         background-color: $portfolios;
-                                        height: 30vh;
+                                        height: 20vh;
                                         width: 78vw;
                                         border: none;
                                         border-radius: 5px;
@@ -1403,6 +1416,8 @@ $firstblue: #58a6ff;
                                 .skills_one_landscape {
                                     margin: 3vh -15vw 0 0;
                                     display: flex;
+                                    // background-color: red;
+                                    // gap: -5vw;
                                 }
                                 .skills_two_landscape {
                                     margin: 0 -15vw 0 0;
@@ -1413,7 +1428,7 @@ $firstblue: #58a6ff;
                                     justify-content: center;
                                     align-items: center;
                                     margin: 2vh 0 0 5vh;
-                                    gap: 2vw;
+                                    gap: 1vw;
                                     .skill_circle {
                                         display: flex;
                                         flex-direction: column;
@@ -1421,8 +1436,8 @@ $firstblue: #58a6ff;
                                         align-items: center;
                                         margin: 2vh 0 1vh 0;
                                         .skill_back {
-                                            width: 11vw;
-                                            height: 11vw;
+                                            width: 12vw;
+                                            height: 12vw;
                                             border: 3px solid $darkblue;
                                             background-color: $nextgreen;
                                             background-color: $skillsteal;
@@ -1432,8 +1447,8 @@ $firstblue: #58a6ff;
                                             justify-content: center;
                                             align-items: center;
                                             .skill_front {
-                                                width: 10vw;
-                                                height: 10vw;
+                                                width: 11vw;
+                                                height: 11vw;
                                                 border: none;
                                                 background-color: $darkblue;
                                                 // background-color: $skillsteal;
@@ -2024,20 +2039,20 @@ $firstblue: #58a6ff;
                                             align-items: center;
                                             gap: 18vw;
                                             #github {
-                                                width: 7vw;
-                                                height: 7vw;
-                                            }
-                                            #linkedin {
-                                                width: 7vw;
-                                                height: 8vw;
-                                            }
-                                            #twitter {
                                                 width: 5vw;
                                                 height: 5vw;
                                             }
+                                            #linkedin {
+                                                width: 5vw;
+                                                height: 6vw;
+                                            }
+                                            #twitter {
+                                                width: 3.5vw;
+                                                height: 3.5vw;
+                                            }
                                             #instagram {
-                                                width: 6vw;
-                                                height: 6.5vw;
+                                                width: 4vw;
+                                                height: 4.5vw;
                                             }
                                         }
                                     }
@@ -2045,16 +2060,16 @@ $firstblue: #58a6ff;
                                         display: flex;
                                         justify-content: center;
                                         gap: 3vw;
-                                        margin: 15vh 0 0 0;
+                                        margin: 30vh 0 0 0;
                                         #copyright_courdevs {
-                                            margin: -5.5vh 0 0 0;
-                                            width: 8vw;
-                                            height: 8vw;
+                                            margin: -4vh 0 0 0;
+                                            width: 6vw;
+                                            height: 6vw;
                                         }
                                         p {
                                             color: $portfolios;
                                             font-size: 1.2em;
-                                            font-size: 3vw;
+                                            font-size: 2,5vw;
                                             // font-weight: bold;
                                             font-family: 'Inter', sans-serif;
                                         }
